lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     instruction -> instruction_if
Rule 6     instruction -> instruction_for
Rule 7     instruction -> instruction_while
Rule 8     instruction -> instruction_return ;
Rule 9     instruction -> instruction_assign ;
Rule 10    instruction -> instruction_print ;
Rule 11    instruction -> BREAK ;
Rule 12    instruction -> CONTINUE ;
Rule 13    instruction -> { instructions }
Rule 14    instruction_return -> RETURN
Rule 15    instruction_return -> RETURN expr
Rule 16    instruction_print -> PRINT printables
Rule 17    printables -> printable
Rule 18    printables -> printables , printable
Rule 19    printable -> expr
Rule 20    printable -> STRING
Rule 21    instruction_assign -> assignable = expr
Rule 22    instruction_assign -> assignable ADDASSIGN expr
Rule 23    instruction_assign -> assignable SUBASSIGN expr
Rule 24    instruction_assign -> assignable MULASSIGN expr
Rule 25    instruction_assign -> assignable DIVASSIGN expr
Rule 26    assignable -> ID
Rule 27    assignable -> matrix_element
Rule 28    assignable -> vector_element
Rule 29    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 30    vector_element -> ID [ INTNUM ]
Rule 31    expr -> assignable
Rule 32    expr -> INTNUM
Rule 33    expr -> FLOAT
Rule 34    expr -> matrix
Rule 35    expr -> matrix_function ( expr )
Rule 36    expr -> - expr
Rule 37    expr -> expr '
Rule 38    expr -> ( expr )
Rule 39    expr -> expr + expr
Rule 40    expr -> expr - expr
Rule 41    expr -> expr * expr
Rule 42    expr -> expr / expr
Rule 43    expr -> expr DOTADD expr
Rule 44    expr -> expr DOTSUB expr
Rule 45    expr -> expr DOTMUL expr
Rule 46    expr -> expr DOTDIV expr
Rule 47    expr -> expr > expr
Rule 48    expr -> expr < expr
Rule 49    expr -> expr EQ expr
Rule 50    expr -> expr NEQ expr
Rule 51    expr -> expr LEQ expr
Rule 52    expr -> expr GEQ expr
Rule 53    matrix_function -> ZEROS
Rule 54    matrix_function -> ONES
Rule 55    matrix_function -> EYE
Rule 56    instruction_if -> IF ( expr ) instruction
Rule 57    instruction_if -> IF ( expr ) instruction ELSE instruction
Rule 58    instruction_for -> FOR ID = range instruction
Rule 59    instruction_while -> WHILE ( expr ) instruction
Rule 60    range -> expr : expr
Rule 61    matrix -> [ vectors ]
Rule 62    vectors -> vectors , vector
Rule 63    vectors -> vector
Rule 64    vector -> [ variables ]
Rule 65    variables -> variables , variable
Rule 66    variables -> variable
Rule 67    variable -> INTNUM
Rule 68    variable -> FLOAT
Rule 69    variable -> assignable

Terminals, with rules where they appear

'                    : 37
(                    : 35 38 56 57 59
)                    : 35 38 56 57 59
*                    : 41
+                    : 39
,                    : 18 29 62 65
-                    : 36 40
/                    : 42
:                    : 60
;                    : 8 9 10 11 12
<                    : 48
=                    : 21 58
>                    : 47
ADDASSIGN            : 22
BREAK                : 11
CONTINUE             : 12
DIVASSIGN            : 25
DOTADD               : 43
DOTDIV               : 46
DOTMUL               : 45
DOTSUB               : 44
ELSE                 : 57
EQ                   : 49
EYE                  : 55
FLOAT                : 33 68
FOR                  : 58
GEQ                  : 52
ID                   : 26 29 30 58
IF                   : 56 57
INTNUM               : 29 29 30 32 67
LEQ                  : 51
MULASSIGN            : 24
NEQ                  : 50
ONES                 : 54
PRINT                : 16
RETURN               : 14 15
STRING               : 20
SUBASSIGN            : 23
WHILE                : 59
ZEROS                : 53
[                    : 29 30 61 64
]                    : 29 30 61 64
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

assignable           : 21 22 23 24 25 31 69
expr                 : 15 19 21 22 23 24 25 35 36 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 56 57 59 60 60
instruction          : 3 4 56 57 57 58 59
instruction_assign   : 9
instruction_for      : 6
instruction_if       : 5
instruction_print    : 10
instruction_return   : 8
instruction_while    : 7
instructions         : 2 4 13
matrix               : 34
matrix_element       : 27
matrix_function      : 35
printable            : 17 18
printables           : 16 18
range                : 58
start                : 0
variable             : 65 66
variables            : 64 65
vector               : 62 63
vector_element       : 28
vectors              : 61 62

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_for
    (7) instruction -> . instruction_while
    (8) instruction -> . instruction_return ;
    (9) instruction -> . instruction_assign ;
    (10) instruction -> . instruction_print ;
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . { instructions }
    (56) instruction_if -> . IF ( expr ) instruction
    (57) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (58) instruction_for -> . FOR ID = range instruction
    (59) instruction_while -> . WHILE ( expr ) instruction
    (14) instruction_return -> . RETURN
    (15) instruction_return -> . RETURN expr
    (21) instruction_assign -> . assignable = expr
    (22) instruction_assign -> . assignable ADDASSIGN expr
    (23) instruction_assign -> . assignable SUBASSIGN expr
    (24) instruction_assign -> . assignable MULASSIGN expr
    (25) instruction_assign -> . assignable DIVASSIGN expr
    (16) instruction_print -> . PRINT printables
    (26) assignable -> . ID
    (27) assignable -> . matrix_element
    (28) assignable -> . vector_element
    (29) matrix_element -> . ID [ INTNUM , INTNUM ]
    (30) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 1 (start -> .)
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    ID              shift and go to state 15

    start                          shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 20
    vector_element                 shift and go to state 21

state 1

    (0) S' -> start .



state 2

    (2) start -> instructions .
    (4) instructions -> instructions . instruction
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_for
    (7) instruction -> . instruction_while
    (8) instruction -> . instruction_return ;
    (9) instruction -> . instruction_assign ;
    (10) instruction -> . instruction_print ;
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . { instructions }
    (56) instruction_if -> . IF ( expr ) instruction
    (57) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (58) instruction_for -> . FOR ID = range instruction
    (59) instruction_while -> . WHILE ( expr ) instruction
    (14) instruction_return -> . RETURN
    (15) instruction_return -> . RETURN expr
    (21) instruction_assign -> . assignable = expr
    (22) instruction_assign -> . assignable ADDASSIGN expr
    (23) instruction_assign -> . assignable SUBASSIGN expr
    (24) instruction_assign -> . assignable MULASSIGN expr
    (25) instruction_assign -> . assignable DIVASSIGN expr
    (16) instruction_print -> . PRINT printables
    (26) assignable -> . ID
    (27) assignable -> . matrix_element
    (28) assignable -> . vector_element
    (29) matrix_element -> . ID [ INTNUM , INTNUM ]
    (30) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 2 (start -> instructions .)
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    ID              shift and go to state 15

    instruction                    shift and go to state 22
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 20
    vector_element                 shift and go to state 21

state 3

    (3) instructions -> instruction .

    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    {               reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (5) instruction -> instruction_if .

    BREAK           reduce using rule 5 (instruction -> instruction_if .)
    CONTINUE        reduce using rule 5 (instruction -> instruction_if .)
    {               reduce using rule 5 (instruction -> instruction_if .)
    IF              reduce using rule 5 (instruction -> instruction_if .)
    FOR             reduce using rule 5 (instruction -> instruction_if .)
    WHILE           reduce using rule 5 (instruction -> instruction_if .)
    RETURN          reduce using rule 5 (instruction -> instruction_if .)
    PRINT           reduce using rule 5 (instruction -> instruction_if .)
    ID              reduce using rule 5 (instruction -> instruction_if .)
    $end            reduce using rule 5 (instruction -> instruction_if .)
    }               reduce using rule 5 (instruction -> instruction_if .)
    ELSE            reduce using rule 5 (instruction -> instruction_if .)


state 5

    (6) instruction -> instruction_for .

    BREAK           reduce using rule 6 (instruction -> instruction_for .)
    CONTINUE        reduce using rule 6 (instruction -> instruction_for .)
    {               reduce using rule 6 (instruction -> instruction_for .)
    IF              reduce using rule 6 (instruction -> instruction_for .)
    FOR             reduce using rule 6 (instruction -> instruction_for .)
    WHILE           reduce using rule 6 (instruction -> instruction_for .)
    RETURN          reduce using rule 6 (instruction -> instruction_for .)
    PRINT           reduce using rule 6 (instruction -> instruction_for .)
    ID              reduce using rule 6 (instruction -> instruction_for .)
    $end            reduce using rule 6 (instruction -> instruction_for .)
    }               reduce using rule 6 (instruction -> instruction_for .)
    ELSE            reduce using rule 6 (instruction -> instruction_for .)


state 6

    (7) instruction -> instruction_while .

    BREAK           reduce using rule 7 (instruction -> instruction_while .)
    CONTINUE        reduce using rule 7 (instruction -> instruction_while .)
    {               reduce using rule 7 (instruction -> instruction_while .)
    IF              reduce using rule 7 (instruction -> instruction_while .)
    FOR             reduce using rule 7 (instruction -> instruction_while .)
    WHILE           reduce using rule 7 (instruction -> instruction_while .)
    RETURN          reduce using rule 7 (instruction -> instruction_while .)
    PRINT           reduce using rule 7 (instruction -> instruction_while .)
    ID              reduce using rule 7 (instruction -> instruction_while .)
    $end            reduce using rule 7 (instruction -> instruction_while .)
    }               reduce using rule 7 (instruction -> instruction_while .)
    ELSE            reduce using rule 7 (instruction -> instruction_while .)


state 7

    (8) instruction -> instruction_return . ;

    ;               shift and go to state 23


state 8

    (9) instruction -> instruction_assign . ;

    ;               shift and go to state 24


state 9

    (10) instruction -> instruction_print . ;

    ;               shift and go to state 25


state 10

    (11) instruction -> BREAK . ;

    ;               shift and go to state 26


state 11

    (12) instruction -> CONTINUE . ;

    ;               shift and go to state 27


state 12

    (13) instruction -> { . instructions }
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_for
    (7) instruction -> . instruction_while
    (8) instruction -> . instruction_return ;
    (9) instruction -> . instruction_assign ;
    (10) instruction -> . instruction_print ;
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . { instructions }
    (56) instruction_if -> . IF ( expr ) instruction
    (57) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (58) instruction_for -> . FOR ID = range instruction
    (59) instruction_while -> . WHILE ( expr ) instruction
    (14) instruction_return -> . RETURN
    (15) instruction_return -> . RETURN expr
    (21) instruction_assign -> . assignable = expr
    (22) instruction_assign -> . assignable ADDASSIGN expr
    (23) instruction_assign -> . assignable SUBASSIGN expr
    (24) instruction_assign -> . assignable MULASSIGN expr
    (25) instruction_assign -> . assignable DIVASSIGN expr
    (16) instruction_print -> . PRINT printables
    (26) assignable -> . ID
    (27) assignable -> . matrix_element
    (28) assignable -> . vector_element
    (29) matrix_element -> . ID [ INTNUM , INTNUM ]
    (30) vector_element -> . ID [ INTNUM ]

    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    ID              shift and go to state 15

    instructions                   shift and go to state 28
    instruction                    shift and go to state 3
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 20
    vector_element                 shift and go to state 21

state 13

    (56) instruction_if -> IF . ( expr ) instruction
    (57) instruction_if -> IF . ( expr ) instruction ELSE instruction

    (               shift and go to state 29


state 14

    (58) instruction_for -> FOR . ID = range instruction

    ID              shift and go to state 30


state 15

    (26) assignable -> ID .
    (29) matrix_element -> ID . [ INTNUM , INTNUM ]
    (30) vector_element -> ID . [ INTNUM ]

    =               reduce using rule 26 (assignable -> ID .)
    ADDASSIGN       reduce using rule 26 (assignable -> ID .)
    SUBASSIGN       reduce using rule 26 (assignable -> ID .)
    MULASSIGN       reduce using rule 26 (assignable -> ID .)
    DIVASSIGN       reduce using rule 26 (assignable -> ID .)
    '               reduce using rule 26 (assignable -> ID .)
    +               reduce using rule 26 (assignable -> ID .)
    -               reduce using rule 26 (assignable -> ID .)
    *               reduce using rule 26 (assignable -> ID .)
    /               reduce using rule 26 (assignable -> ID .)
    DOTADD          reduce using rule 26 (assignable -> ID .)
    DOTSUB          reduce using rule 26 (assignable -> ID .)
    DOTMUL          reduce using rule 26 (assignable -> ID .)
    DOTDIV          reduce using rule 26 (assignable -> ID .)
    >               reduce using rule 26 (assignable -> ID .)
    <               reduce using rule 26 (assignable -> ID .)
    EQ              reduce using rule 26 (assignable -> ID .)
    NEQ             reduce using rule 26 (assignable -> ID .)
    LEQ             reduce using rule 26 (assignable -> ID .)
    GEQ             reduce using rule 26 (assignable -> ID .)
    ;               reduce using rule 26 (assignable -> ID .)
    ,               reduce using rule 26 (assignable -> ID .)
    )               reduce using rule 26 (assignable -> ID .)
    :               reduce using rule 26 (assignable -> ID .)
    BREAK           reduce using rule 26 (assignable -> ID .)
    CONTINUE        reduce using rule 26 (assignable -> ID .)
    {               reduce using rule 26 (assignable -> ID .)
    IF              reduce using rule 26 (assignable -> ID .)
    FOR             reduce using rule 26 (assignable -> ID .)
    WHILE           reduce using rule 26 (assignable -> ID .)
    RETURN          reduce using rule 26 (assignable -> ID .)
    PRINT           reduce using rule 26 (assignable -> ID .)
    ID              reduce using rule 26 (assignable -> ID .)
    ]               reduce using rule 26 (assignable -> ID .)
    [               shift and go to state 31


state 16

    (59) instruction_while -> WHILE . ( expr ) instruction

    (               shift and go to state 32


state 17

    (14) instruction_return -> RETURN .
    (15) instruction_return -> RETURN . expr
    (31) expr -> . assignable
    (32) expr -> . INTNUM
    (33) expr -> . FLOAT
    (34) expr -> . matrix
    (35) expr -> . matrix_function ( expr )
    (36) expr -> . - expr
    (37) expr -> . expr '
    (38) expr -> . ( expr )
    (39) expr -> . expr + expr
    (40) expr -> . expr - expr
    (41) expr -> . expr * expr
    (42) expr -> . expr / expr
    (43) expr -> . expr DOTADD expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTMUL expr
    (46) expr -> . expr DOTDIV expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr LEQ expr
    (52) expr -> . expr GEQ expr
    (26) assignable -> . ID
    (27) assignable -> . matrix_element
    (28) assignable -> . vector_element
    (61) matrix -> . [ vectors ]
    (53) matrix_function -> . ZEROS
    (54) matrix_function -> . ONES
    (55) matrix_function -> . EYE
    (29) matrix_element -> . ID [ INTNUM , INTNUM ]
    (30) vector_element -> . ID [ INTNUM ]

    ;               reduce using rule 14 (instruction_return -> RETURN .)
    INTNUM          shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 40
    (               shift and go to state 39
    ID              shift and go to state 15
    [               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44

    expr                           shift and go to state 33
    assignable                     shift and go to state 34
    matrix                         shift and go to state 37
    matrix_function                shift and go to state 38
    matrix_element                 shift and go to state 20
    vector_element                 shift and go to state 21

state 18

    (21) instruction_assign -> assignable . = expr
    (22) instruction_assign -> assignable . ADDASSIGN expr
    (23) instruction_assign -> assignable . SUBASSIGN expr
    (24) instruction_assign -> assignable . MULASSIGN expr
    (25) instruction_assign -> assignable . DIVASSIGN expr

    =               shift and go to state 45
    ADDASSIGN       shift and go to state 46
    SUBASSIGN       shift and go to state 47
    MULASSIGN       shift and go to state 48
    DIVASSIGN       shift and go to state 49


state 19

    (16) instruction_print -> PRINT . printables
    (17) printables -> . printable
    (18) printables -> . printables , printable
    (19) printable -> . expr
    (20) printable -> . STRING
    (31) expr -> . assignable
    (32) expr -> . INTNUM
    (33) expr -> . FLOAT
    (34) expr -> . matrix
    (35) expr -> . matrix_function ( expr )
    (36) expr -> . - expr
    (37) expr -> . expr '
    (38) expr -> . ( expr )
    (39) expr -> . expr + expr
    (40) expr -> . expr - expr
    (41) expr -> . expr * expr
    (42) expr -> . expr / expr
    (43) expr -> . expr DOTADD expr
    (44) expr -> . expr DOTSUB expr
    (45) expr -> . expr DOTMUL expr
    (46) expr -> . expr DOTDIV expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr LEQ expr
    (52) expr -> . expr GEQ expr
    (26) assignable -> . ID
    (27) assignable -> . matrix_element
    (28) assignable -> . vector_element
    (61) matrix -> . [ vectors ]
    (53) matrix_function -> . ZEROS
    (54) matrix_function -> . ONES
    (55) matrix_function -> . EYE
    (29) matrix_element -> . ID [ INTNUM , INTNUM ]
    (30) vector_element -> . ID [ INTNUM ]

    STRING          shift and go to state 53
    INTNUM          shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 40
    (               shift and go to state 39
    ID              shift and go to state 15
    [               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44

    printables                     shift and go to state 50
    printable                      shift and go to state 51
    expr                           shift and go to state 52
    assignable                     shift and go to state 34
    matrix                         shift and go to state 37
    matrix_function                shift and go to state 38
    matrix_element                 shift and go to state 20
    vector_element                 shift and go to state 21

state 20

    (27) assignable -> matrix_element .

    =               reduce using rule 27 (assignable -> matrix_element .)
    ADDASSIGN       reduce using rule 27 (assignable -> matrix_element .)
    SUBASSIGN       reduce using rule 27 (assignable -> matrix_element .)
    MULASSIGN       reduce using rule 27 (assignable -> matrix_element .)
    DIVASSIGN       reduce using rule 27 (assignable -> matrix_element .)
    '               reduce using rule 27 (assignable -> matrix_element .)
    +               reduce using rule 27 (assignable -> matrix_element .)
    -               reduce using rule 27 (assignable -> matrix_element .)
    *               reduce using rule 27 (assignable -> matrix_element .)
    /               reduce using rule 27 (assignable -> matrix_element .)
    DOTADD          reduce using rule 27 (assignable -> matrix_element .)
    DOTSUB          reduce using rule 27 (assignable -> matrix_element .)
    DOTMUL          reduce using rule 27 (assignable -> matrix_element .)
    DOTDIV          reduce using rule 27 (assignable -> matrix_element .)
    >               reduce using rule 27 (assignable -> matrix_element .)
    <               reduce using rule 27 (assignable -> matrix_element .)
    EQ              reduce using rule 27 (assignable -> matrix_element .)
    NEQ             reduce using rule 27 (assignable -> matrix_element .)
    LEQ             reduce using rule 27 (assignable -> matrix_element .)
    GEQ             reduce using rule 27 (assignable -> matrix_element .)
    ;               reduce using rule 27 (assignable -> matrix_element .)
    ,               reduce using rule 27 (assignable -> matrix_element .)
    )               reduce using rule 27 (assignable -> matrix_element .)
    :               reduce using rule 27 (assignable -> matrix_element .)
    BREAK           reduce using rule 27 (assignable -> matrix_element .)
    CONTINUE        reduce using rule 27 (assignable -> matrix_element .)
    {               reduce using rule 27 (assignable -> matrix_element .)
    IF              reduce using rule 27 (assignable -> matrix_element .)
    FOR             reduce using rule 27 (assignable -> matrix_element .)
    WHILE           reduce using rule 27 (assignable -> matrix_element .)
    RETURN          reduce using rule 27 (assignable -> matrix_element .)
    PRINT           reduce using rule 27 (assignable -> matrix_element .)
    ID              reduce using rule 27 (assignable -> matrix_element .)
    ]               reduce using rule 27 (assignable -> matrix_element .)


state 21

    (28) assignable -> vector_element .

    =               reduce using rule 28 (assignable -> vector_element .)
    ADDASSIGN       reduce using rule 28 (assignable -> vector_element .)
    SUBASSIGN       reduce using rule 28 (assignable -> vector_element .)
    MULASSIGN       reduce using rule 28 (assignable -> vector_element .)
    DIVASSIGN       reduce using rule 28 (assignable -> vector_element .)
    '               reduce using rule 28 (assignable -> vector_element .)
    +               reduce using rule 28 (assignable -> vector_element .)
    -               reduce using rule 28 (assignable -> vector_element .)
    *               reduce using rule 28 (assignable -> vector_element .)
    /               reduce using rule 28 (assignable -> vector_element .)
    DOTADD          reduce using rule 28 (assignable -> vector_element .)
    DOTSUB          reduce using rule 28 (assignable -> vector_element .)
    DOTMUL          reduce using rule 28 (assignable -> vector_element .)
    DOTDIV          reduce using rule 28 (assignable -> vector_element .)
    >               reduce using rule 28 (assignable -> vector_element .)
    <               reduce using rule 28 (assignable -> vector_element .)
    EQ              reduce using rule 28 (assignable -> vector_element .)
    NEQ             reduce using rule 28 (assignable -> vector_element .)
    LEQ             reduce using rule 28 (assignable -> vector_element .)
    GEQ             reduce using rule 28 (assignable -> vector_element .)
    ;               reduce using rule 28 (assignable -> vector_element .)
    ,               reduce using rule 28 (assignable -> vector_element .)
    )               reduce using rule 28 (assignable -> vector_element .)
    :               reduce using rule 28 (assignable -> vector_element .)
    BREAK           reduce using rule 28 (assignable -> vector_element .)
    CONTINUE        reduce using rule 28 (assignable -> vector_element .)
    {               reduce using rule 28 (assignable -> vector_element .)
    IF              reduce using rule 28 (assignable -> vector_element .)
    FOR             reduce using rule 28 (assignable -> vector_element .)
    WHILE           reduce using rule 28 (assignable -> vector_element .)
    RETURN          reduce using rule 28 (assignable -> vector_element .)
    PRINT           reduce using rule 28 (assignable -> vector_element .)
    ID              reduce using rule 28 (assignable -> vector_element .)
    ]               reduce using rule 28 (assignable -> vector_element .)


state 22

    (4) instructions -> instructions instruction .

    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 23

    (8) instruction -> instruction_return ; .

    BREAK           reduce using rule 8 (instruction -> instruction_return ; .)
    CONTINUE        reduce using rule 8 (instruction -> instruction_return ; .)
    {               reduce using rule 8 (instruction -> instruction_return ; .)
    IF              reduce using rule 8 (instruction -> instruction_return ; .)
    FOR             reduce using rule 8 (instruction -> instruction_return ; .)
    WHILE           reduce using rule 8 (instruction -> instruction_return ; .)
    RETURN          reduce using rule 8 (instruction -> instruction_return ; .)
    PRINT           reduce using rule 8 (instruction -> instruction_return ; .)
    ID              reduce using rule 8 (instruction -> instruction_return ; .)
    $end            reduce using rule 8 (instruction -> instruction_return ; .)
    }               reduce using rule 8 (instruction -> instruction_return ; .)
    ELSE            reduce using rule 8 (instruction -> instruction_return ; .)


state 24

    (9) instruction -> instruction_assign ; .

    BREAK           reduce using rule 9 (instruction -> instruction_assign ; .)
    CONTINUE        reduce using rule 9 (instruction -> instruction_assign ; .)
    {               reduce using rule 9 (instruction -> instruction_assign ; .)
    IF              reduce using rule 9 (instruction -> instruction_assign ; .)
    FOR             reduce using rule 9 (instruction -> instruction_assign ; .)
    WHILE           reduce using rule 9 (instruction -> instruction_assign ; .)
    RETURN          reduce using rule 9 (instruction -> instruction_assign ; .)
    PRINT           reduce using rule 9 (instruction -> instruction_assign ; .)
    ID              reduce using rule 9 (instruction -> instruction_assign ; .)
    $end            reduce using rule 9 (instruction -> instruction_assign ; .)
    }               reduce using rule 9 (instruction -> instruction_assign ; .)
    ELSE            reduce using rule 9 (instruction -> instruction_assign ; .)


state 25

    (10) instruction -> instruction_print ; .

    BREAK           reduce using rule 10 (instruction -> instruction_print ; .)
    CONTINUE        reduce using rule 10 (instruction -> instruction_print ; .)
    {               reduce using rule 10 (instruction -> instruction_print ; .)
    IF              reduce using rule 10 (instruction -> instruction_print ; .)
    FOR             reduce using rule 10 (instruction -> instruction_print ; .)
    WHILE           reduce using rule 10 (instruction -> instruction_print ; .)
    RETURN          reduce using rule 10 (instruction -> instruction_print ; .)
    PRINT           reduce using rule 10 (instruction -> instruction_print ; .)
    ID              reduce using rule 10 (instruction -> instruction_print ; .)
    $end            reduce using rule 10 (instruction -> instruction_print ; .)
    }               reduce using rule 10 (instruction -> instruction_print ; .)
    ELSE            reduce using rule 10 (instruction -> instruction_print ; .)


state 26

    (11) instruction -> BREAK ; .
